# imgui_fork

./: imgui_draw.cpp
examples/example_sdl_opengl3/: CMakeLists.txt  japanese_glyph_test.cpp
examples/example_sdl_opengl3/data/: GetNotoSansCJKJP.cmd  GetNotoSansCJKJP.sh
examples/example_sdl_opengl3/kanji/: personal_name_1.txt  personal_name_2.txt  regular_use.txt  regular_use_force_2byte_codepoint+personal_name_utf8.txt  regular_use_modern_form_2byte+personal_names.txt
examples/libs/SDL2/: GetSDL2Framework.sh
